--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "If you are not familiar with linters, read [root level README](../README.md).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"webpack"
   },
   "repository": {
     "type": "git",
